--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-dinky
+title: "Introduction to NGS Data"
+description: <img src="https://uofabioinformaticshub.github.io/Intro-Bash-Sept-2017/images/UoA_logo_col_vert.png" alt="UofAlogo" border="0px" style="width:143px;height:106px;"><br><br>Course Homepage<br>September 2017
